--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "immutability-helper": "^3.0.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-card-flip": "^1.0.10",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -40,6 +41,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
-    "webpack": "^4.41.5"
+    "webpack": "4.41.5"
   }
 }
